--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <div class="container">
             <div class="header-content">
@@ -31,9 +30,7 @@
         </div>
     </header>
 
-    <!-- Main Content -->
     <main class="container">
-        <!-- Summary Cards -->
         <div class="summary-cards">
             <div class="card">
                 <div class="card-icon">
@@ -102,7 +99,6 @@
             </div>
         </div>
 
-        <!-- Tabs -->
         <div class="tabs">
             <button class="tab active" data-tab="dashboard">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -126,3 +122,116 @@
                 Strategy
             </button>
         </div>
+
+        <div class="tab-content active" id="dashboard">
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ETF</th>
+                            <th>Shares</th>
+                            <th>Avg Entry</th>
+                            <th>Current Price</th>
+                            <th>Invested</th>
+                            <th>Current Value</th>
+                            <th>Gain/Loss</th>
+                            <th>Reserved</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="positionsBody"></tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="tab-content" id="transactions">
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>ETF</th>
+                            <th>Action</th>
+                            <th>Shares</th>
+                            <th>Price</th>
+                            <th>Total</th>
+                            <th>Notes</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="transactionsBody"></tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="tab-content" id="strategy">
+            <div class="table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>ETF</th>
+                            <th>Strategy Notes</th>
+                            <th>Entry Price</th>
+                            <th>Current Price</th>
+                            <th>Price Change</th>
+                            <th>Reserved Capital</th>
+                        </tr>
+                    </thead>
+                    <tbody id="strategyBody"></tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+
+    <div class="modal" id="transactionModal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modalTitle">Add Transaction</h2>
+                <button class="modal-close" onclick="closeTransactionModal()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+            <form id="transactionForm">
+                <div class="form-group">
+                    <label for="transactionETF">ETF Symbol</label>
+                    <input type="text" id="transactionETF" required placeholder="e.g., SOXX">
+                </div>
+                <div class="form-group">
+                    <label for="transactionAction">Action</label>
+                    <select id="transactionAction" required>
+                        <option value="BUY">Buy</option>
+                        <option value="SELL">Sell</option>
+                    </select>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="transactionShares">Shares</label>
+                        <input type="number" id="transactionShares" step="0.01" required placeholder="0.00">
+                    </div>
+                    <div class="form-group">
+                        <label for="transactionPrice">Price</label>
+                        <input type="number" id="transactionPrice" step="0.01" required placeholder="0.00">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="transactionDate">Date</label>
+                    <input type="date" id="transactionDate" required>
+                </div>
+                <div class="form-group">
+                    <label for="transactionNotes">Notes (Optional)</label>
+                    <textarea id="transactionNotes" rows="3" placeholder="Add notes about this transaction..."></textarea>
+                </div>
+                <div class="modal-actions">
+                    <button type="button" class="btn-secondary" onclick="closeTransactionModal()">Cancel</button>
+                    <button type="submit" class="btn-primary">Add Transaction</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+</html>
